[tool.setuptools]
packages = []

[project]
name = 'olympics'
version = '0.1'
requires-python = '>=3.10'
dependencies = [
  'pytest',
  'pytest-cov',
  'rich',
  'fastapi[standard]',
]

[tool.pytest.ini_options]  
addopts = "--cov=olympics --cov=tests --cov-report=term-missing"

[tool.coverage.run]
include = ["olympics/*", "tests/*"]